--- a/spec/index.html
+++ b/spec/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8" />
     <title>Jasmine Spec Runner</title>
 
-    <link rel="shortcut icon" type="image/png" href="lib/jasmine-favicon.png" />
-    <link rel="stylesheet" type="text/css" href="lib/jasmine/jasmine.css" />
-    <script type="text/javascript" src="lib/jasmine/jasmine.js"></script>
-    <script type="text/javascript" src="lib/jasmine/jasmine.html.js"></script>
+    <link rel="shortcut icon" type="image/png" href="vendor/jasmine-favicon.png" />
+    <link rel="stylesheet" type="text/css" href="vendor/jasmine/jasmine.css" />
+    <script type="text/javascript" src="vendor/jasmine/jasmine.js"></script>
+    <script type="text/javascript" src="vendor/jasmine/jasmine.html.js"></script>
 
     <!-- include source files here... -->
-    <script type="text/javascript" src="../lib/underscore.js"></script>
-    <script type="text/javascript" src="../underscore-assert.js"></script>
+    <script type="text/javascript" src="../vendor/underscore.js"></script>
+    <script type="text/javascript" src="../underscore.assert.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="src/assert-spec.js"></script>
+    <script type="text/javascript" src="scripts/assert-spec.js"></script>
 
     <script type="text/javascript">
         (function () {
