Not need mixin to extend _ object.

--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../underscore.assert.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="scripts/assert-spec.js"></script>
+    <script type="text/javascript" src="spec/assert-spec.js"></script>
 
     <script type="text/javascript">
         (function () {
